Fix for the issue wms-14565 related to word break inside the dialogs.

--- a/src/main/webapp/styles/less/wm-widgets.less
+++ b/src/main/webapp/styles/less/wm-widgets.less
@@ -1897,7 +1897,7 @@ body.modal-open {
     list-style: none;
     outline: none;
     .app-list-item-value {
-     word-break: break-all;
+     word-break: break-word;
     }
     &.active {
       z-index: auto !important;/***fix for popover in the list item getting hidden***/
@@ -2015,7 +2015,7 @@ body.modal-open {
   .app-label {
     overflow: hidden;
     text-overflow: ellipsis;
-    word-break: break-all;
+    word-break: break-word;
   }
   .media {
     margin-top: 0;
@@ -2116,7 +2116,7 @@ body.modal-open {
 .app-message {
   position: relative;
   &.alert {
-    word-break: break-all;
+    word-break: break-word;
   }
   .icon {
     display: inline-block;
@@ -3729,7 +3729,7 @@ If the height and width are not specified the video takes the height of the post
       position: relative;
       overflow : auto;
       .app-message {
-        word-break: break-all;
+        word-break: break-word;
         padding: 4px;
         margin: 1em 1.5em 0;
         /*To overcome specificity issue*/
